# ProiectDevOpsFinal

./: .env.example  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  fix_passwords.sql  generate_hashes.py  pom.xml  update_passwords.sql
.github/workflows/: ci.yml
analytics-service/: Cargo.toml  Dockerfile
analytics-service/src/: analysis.rs  main.rs  price_generator.rs
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertList.tsx  Dashboard.tsx  Login.tsx  PriceCard.tsx  PriceChart.tsx
frontend/src/hooks/: useAuth.tsx  useWebSocket.ts
frontend/src/services/: api.ts  websocket.ts
observability/: prometheus.yml
secrets/: db_password.txt  jwt_secret.txt
src/main/java/org/example/proiect/: ProiectApplication.java
src/main/java/org/example/proiect/config/: OpenApiConfig.java  RestTemplateConfig.java  SecurityConfig.java  WebSocketConfig.java
src/main/java/org/example/proiect/controller/: AlertController.java  AnalyticsController.java  AuthController.java  PriceController.java  SymbolController.java  WebSocketController.java
src/main/java/org/example/proiect/dto/: AlertDto.java  AnalyticsPriceData.java  AuthRequest.java  AuthResponse.java  PriceDto.java  RegisterRequest.java  (+1 more)
src/main/resources/: application.properties
src/main/resources/db/migration/: V1__init_schema.sql  V2__seed_data.sql
src/test/java/org/example/proiect/: ProiectApplicationTests.java
(+18 files in other folders)
