[package]
name = "analytics-service"
version = "0.1.0"
edition = "2021"
authors = ["Stock Market Platform"]
description = "Analytics microservice for stock market data processing"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.12", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random for simulation
rand = "0.8"

# Environment variables
dotenv = "0.15"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[profile.release]
opt-level = 3
lto = true

